--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -1,4 +1,4 @@
-.site-header {
+/* .site-header {
   background-color: rgba(0, 0, 0, 0.85);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
@@ -10,4 +10,4 @@
 .site-header a:hover {
   color: #fff;
   text-decoration: none;
-}
+} */
