--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -1,13 +1,38 @@
-/* .site-header {
-  background-color: rgba(0, 0, 0, 0.85);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
+body,
+html {
+  height: 100%;
 }
-.site-header a {
-  color: #999;
-  transition: ease-in-out color 0.15s;
+
+.sidenav {
+  max-width: 10%;
+  background-color: #ffbe76;
+  height: 100%;
+  margin-bottom: 0;
 }
-.site-header a:hover {
-  color: #fff;
-  text-decoration: none;
-} */
+
+.sidenav a {
+  color: #dff9fb;
+}
+
+.sidenav-content {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  padding-bottom: 5px;
+  background-color: black;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 50%;
+  margin-top: 30%;
+}
