Modal for schedules and more styling

--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -27,6 +27,9 @@ footer {
   padding-left: 32px;
   padding-right: 32px;
   color: #2d3436;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content {
@@ -49,6 +52,15 @@ footer {
   margin-left: 32px;
   margin-right: 32px;
   border: 1px solid #475c7a;
+}
+
+#view-schedule-modal.modal {
+  width: 98%;
+}
+.nav-icon {
+  color: #475c7a;
+  width: 50px;
+  height: 40px;
 }
 
 /* .colors {
