--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -56,11 +56,42 @@ footer {
 
 #view-schedule-modal.modal {
   width: 98%;
+  height: 92%;
+  max-height: 92%;
 }
 .nav-icon {
   color: #475c7a;
   width: 50px;
   height: 40px;
+}
+
+#calendar {
+  overflow: auto;
+}
+
+#calendar-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.heading {
+  display: table-row;
+  text-align: center;
+}
+
+.row {
+  display: table-row;
+  height: 90px;
+}
+
+.cell {
+  display: table-cell;
+  border: none;
+  border-width: thin;
+  padding-left: 60px;
+  padding-right: 60px;
+  text-align: center;
 }
 
 /* .colors {
