--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -63,6 +63,13 @@ footer {
   height: 88%;
   max-height: 88%;
 }
+
+#add-employee-modal.modal {
+  width: 40%;
+  max-height: 80%;
+  height: 80%;
+}
+
 .nav-icon {
   color: #475c7a;
   width: 50px;
@@ -90,6 +97,10 @@ footer {
   padding-left: 0;
 }
 
+#view-schedule-modal.modal .modal-content {
+  padding-left: 0;
+}
+
 #schedule-title {
   margin-left: 30px;
   margin-top: 30px;
@@ -110,7 +121,7 @@ footer {
   background-color: #ffd8a8;
 }
 
-.row {
+.colgroup .row {
   vertical-align: middle;
   text-align: center;
   width: 250px;
@@ -121,11 +132,15 @@ footer {
   min-height: 100px;
 }
 
-.row > * {
+.colgroup .row > * {
   white-space: nowrap;
   text-overflow: ellipsis;
   margin-top: 1px;
   margin-bottom: 1px;
+}
+
+.text-primary {
+  color: #475c7a;
 }
 
 .text-secondary {
