--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -138,6 +138,7 @@ footer {
 .colgroup .row > * {
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow: hidden;
   margin-top: 1px;
   margin-bottom: 1px;
 }
